@@ -2,7 +2,7 @@
 
 A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and modern search techniques.
 
-**Current Version:** 1.0.5.0 (NNUE Release - November 2025)
+**Current Version:** 1.0.6.0 (NNUE Release - November 2025)
 
 ## Features
 
@@ -15,6 +15,7 @@ A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and moder
 - **Internal Iterative Reductions (IIR)**
 - **Late Move Pruning (LMP)**
 - **Futility Pruning (FP)**
+- **PVS SEE Pruning**
 - **Null Move Pruning (NMP)**
 - **Reverse Futility Pruning (RFP)**
 - **Quiescence Search** with SEE pruning
